<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:hint="@string/edit_text_hint"
        android:inputType="number"
        android:importantForAutofill="no"
        tools:ignore="RtlHardcoded"
        style="@style/calc_text_style"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_one"
                android:text="@string/btn_one"
                android:onClick="operationFunction"
                style="@style/btn_style" />
            <Button
                android:id="@+id/btn_two"
                android:text="@string/btn_two"
                android:onClick="operationFunction"
                style="@style/btn_style" />
            <Button
                android:id="@+id/btn_three"
                android:text="@string/btn_three"
                android:onClick="operationFunction"
                style="@style/btn_style" />
            <Button
                android:id="@+id/btn_division"
                android:text="@string/btn_division"
                android:layout_marginEnd="8dp"
                android:onClick="operationFunction"
                style="@style/btn_style" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_four"
                android:text="@string/btn_four"
                android:onClick="operationFunction"
                style="@style/btn_style" />
            <Button
                android:id="@+id/btn_five"
                android:text="@string/btn_five"
                android:onClick="operationFunction"
                style="@style/btn_style" />
            <Button
                android:id="@+id/btn_six"
                android:text="@string/btn_six"
                android:onClick="operationFunction"
                style="@style/btn_style" />
            <Button
                android:id="@+id/btn_minus"
                android:text="@string/btn_minus"
                android:layout_marginEnd="8dp"
                android:onClick="operationFunction"
                style="@style/btn_style" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_seven"
                android:text="@string/btn_seven"
                android:onClick="operationFunction"
                style="@style/btn_style" />
            <Button
                android:id="@+id/btn_eight"
                android:text="@string/btn_eight"
                android:onClick="operationFunction"
                style="@style/btn_style" />
            <Button
                android:id="@+id/btn_nine"
                android:text="@string/btn_nine"
                android:onClick="operationFunction"
                style="@style/btn_style" />
            <Button
                android:id="@+id/btn_plus"
                android:text="@string/btn_plus"
                android:layout_marginEnd="8dp"
                android:onClick="operationFunction"
                style="@style/btn_style" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_clear"
                android:text="@string/btn_clear"
                android:onClick="operationFunction"
                style="@style/btn_style" />
            <Button
                android:id="@+id/btn_zero"
                android:text="@string/btn_zero"
                android:onClick="operationFunction"
                style="@style/btn_style" />
            <Button
                android:id="@+id/btn_dot"
                android:text="@string/btn_dot"
                android:onClick="operationFunction"
                style="@style/btn_style" />
            <Button
                android:id="@+id/btn_equal"
                android:text="@string/btn_equal"
                android:layout_marginEnd="8dp"
                android:onClick="operationFunction"
                style="@style/btn_style" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>